// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ortto's enterAudience destination action: all fields 1`] = `
Array [
  Object {
    "anonymous_id": "g4[AW[GlP",
    "audience_id": "g4[AW[GlP",
    "enable_batching": true,
    "ip": "67.23.196.251",
    "location": Object {
      "city": "g4[AW[GlP",
      "country": "g4[AW[GlP",
      "post_code": "g4[AW[GlP",
      "state": "g4[AW[GlP",
    },
    "message_id": "g4[AW[GlP",
    "timestamp": "2034-04-24T13:21:39.985Z",
    "traits": Object {
      "email": "mekis@vuku.sm",
      "first_name": "g4[AW[GlP",
      "last_name": "g4[AW[GlP",
      "phone": "g4[AW[GlP",
    },
    "user_id": "g4[AW[GlP",
  },
]
`;

exports[`Testing snapshot for Ortto's enterAudience destination action: required fields 1`] = `
Array [
  Object {
    "anonymous_id": "g4[AW[GlP",
    "audience_id": "g4[AW[GlP",
    "message_id": "g4[AW[GlP",
    "user_id": "g4[AW[GlP",
  },
]
`;
